attempted to fix a bug where WOTF, Earthsea, and Ponyo descriptions on desktop were overflowing. Noticed that all major tablets were able to use the design fine, so this change was put off until other fixes were prioritized

--- a/src/index.css
+++ b/src/index.css
@@ -160,16 +160,17 @@ code {
     width: 55%;
     margin: auto;
     margin-top: -100px;
+    margin-bottom: -50%;
     display: block;
     right: 0; 
     position: fixed; 
   }
   
-  
   .writing p {
     margin: 2.5%;
     text-align: left;
     padding-left: 5%;
+    font-size:85%;    
   }
   .each-movie {
     transform: scale(0.75);
